--- a/examples/clipboard_demo.html
+++ b/examples/clipboard_demo.html
@@ -5,73 +5,86 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Manipulation Framework - Clipboard Demo</title>
   <style>
-    body { font-family: sans-serif; margin: 20px; }
+    body { font-family: sans-serif; margin: 20px; background-color: #f5f5f5; }
+    .instructions { background: white; padding: 15px; border-radius: 8px; margin-bottom: 20px; }
     .layer-container {
       border: 2px solid #ccc;
-      padding: 10px;
-      margin: 10px;
-      min-height: 150px;
-      background: white;
+      padding: 20px;
+      margin: 10px 0;
+      min-height: 100px;
+      background: #fff;
+      position: relative;
     }
     .box {
       width: 80px;
       height: 80px;
       background: #e67e22;
       color: white;
-      display: inline-flex;
+      display: flex;
       align-items: center;
       justify-content: center;
-      margin: 5px;
+      border-radius: 4px;
       cursor: pointer;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.2);
     }
-    .selected { outline: 3px solid red; }
-    #status { font-weight: bold; color: #2c3e50; margin-bottom: 10px; }
+    .selected { outline: 4px solid red; }
+    #status { font-weight: bold; color: #2c3e50; margin-bottom: 10px; background: #eee; padding: 10px; border-radius: 4px; }
     .controls { margin: 20px 0; }
-    button { padding: 8px 16px; cursor: pointer; }
+    button { padding: 10px 15px; cursor: pointer; background: #3498db; color: white; border: none; border-radius: 4px; margin-right: 5px; }
+    button:hover { background: #2980b9; }
   </style>
 </head>
 <body>
   <h1>Clipboard & Cross-Layer Demo</h1>
-  <div id="status">Mode: Runtime (Ctrl+M to toggle)</div>
+  <div class="instructions">
+    <p>1. Press <strong>Ctrl+M</strong> to enter Manipulation Mode.</p>
+    <p>2. Click <strong>Item 1</strong> to select it.</p>
+    <p>3. Press <strong>Ctrl+C</strong> (Copy), then <strong>F2</strong> (Switch to Template layer), then <strong>Ctrl+V</strong> (Paste).</p>
+  </div>
+  
+  <div id="status">Mode: Runtime</div>
   
   <div class="controls">
-    <button onclick="mf.copy()">Copy (Ctrl+C)</button>
-    <button onclick="mf.cut()">Cut (Ctrl+X)</button>
-    <button onclick="mf.paste('template')">Paste to Template Layer (Ctrl+V uses current)</button>
     <button onclick="mf.switchLayer('document')">Switch to Doc (F1)</button>
     <button onclick="mf.switchLayer('template')">Switch to Template (F2)</button>
   </div>
 
   <h3>Document Layer</h3>
   <div id="doc-layer" class="layer-container">
-    <div id="item1" class="box" style="position: absolute; left: 50px; top: 300px;">Item 1</div>
+    <!-- Item 1 will be positioned relatively here initially -->
+    <div id="item1" class="box" style="position: absolute; left: 20px; top: 10px;">Item 1</div>
   </div>
 
   <h3>Template Layer</h3>
   <div id="temp-layer" class="layer-container">
-    <!-- Pasted items will appear here if target is template -->
+    <!-- Pasted items will appear here -->
   </div>
 
   <script src="../src/framework.js"></script>
   <script>
     const mf = window.ManipulationFramework;
+    
+    // Initialize Item 1 in Document layer
     document.getElementById('item1').initializeFramework('document');
 
     const statusEl = document.getElementById('status');
+    
+    function updateUI() {
+      statusEl.textContent = `Mode: ${mf.enabled ? 'MANIPULATION' : 'Runtime'} | Active Layer: ${mf.currentLayer.toUpperCase()}`;
+    }
+
     const originalToggle = mf.toggleMode;
     mf.toggleMode = function() {
       originalToggle.apply(this);
-      updateStatus();
+      updateUI();
     };
     const originalSwitch = mf.switchLayer;
     mf.switchLayer = function(l) {
       originalSwitch.apply(this, [l]);
-      updateStatus();
+      updateUI();
     };
 
-    function updateStatus() {
-      statusEl.textContent = `Mode: ${mf.enabled ? 'Manipulation' : 'Runtime'} | Active Layer: ${mf.currentLayer}`;
-    }
+    updateUI();
   </script>
 </body>
 </html>
